--- a/docs/concepts/tools.mdx
+++ b/docs/concepts/tools.mdx
@@ -1,6 +1,16 @@
 # Tools
 
-In Ailoy, a **tool** allows an agent to access functionality beyond what the base language model can offer, such as real-time data or domain-specific APIs. Each tool is defined using two components:
+{/* prettier-ignore-start */}
+
+:::info
+To see the basic usage of tools, refer to **[Using Tools](/docs/tutorial/using-tools)** page.
+:::
+
+{/* prettier-ignore-end */}
+
+In Ailoy, a **tool** allows an agent to access functionality beyond what the base language model can offer, such as real-time data or domain-specific APIs.
+
+Each tool is defined using two components:
 
 ### Description
 
@@ -10,7 +20,7 @@ The `description` field defines how the AI understands and uses the tool. It fol
 
 The `behavior` field defines how the tool actually behaves when invoked. This varies depending on the tool type. For example, a REST API tool includes the endpoint URL, HTTP method, and headers. A native tool may define a Python or Node.js function, while a built-in tool delegates the behavior to a pre-defined module.
 
-To see the examples, take a look at the **[out-of-the-box tools](#out-of-the-box-tools)**.
+To see the examples, take a look at the **[Out-of-the-box tools](#out-of-the-box-tools)** section.
 
 ## Types
 
@@ -28,7 +38,7 @@ The `behavior` object of a REST API tool definition can contain:
 - URL(`baseURL`), HTTP method(`method`) and headers(`headers`) to define the REST API request to send.
 
 - Authentication method(`authentication`) to apply pre-defined authentication injection.
-If the API does not require authentication or needs custom one, the authentication field may not be contained.
+If the API does not require authentication or needs custom one, the authentication field might not be contained.
 
 - Body content(`body`) to be the requests body of `POST` or `PUT` requests.
 
@@ -40,12 +50,14 @@ The parameters that the LLM decided to put into the REST API tool can become:
 - Body parameters: Ones included as `{param_name}` in the `body` field
 - Query parameters: Ones other than path parameters or body parameters
 
+***Tool definition*** for a REST API tool finally looks like:
+
 ```json
 {
   "type": "restapi",
   "description": {...},
   "behavior": {
-    "baseURL": "https://api.themoviedb.org/3/search/movie",
+    "baseURL": "https://api.themoviedb.org/3/movie/${movie_id}/recommendations",
     "method": "GET",
     "authentication": "bearer",
     "headers": {
@@ -56,6 +68,41 @@ The parameters that the LLM decided to put into the REST API tool can become:
 }
 ```
 
+#### How to add your own tools
+
+You can make your `Agent` call any REST API you want by adding a REST API tool through:
+
+- `agent.add_restapi_tool()` (for ***Python***)
+- `agent.addRESTAPITool()` (for ***Node.js***).
+
+These functions get a ***tool definition***, and an ***authenticator*** optionally as their parameters.  
+- **Tool definition**: Object including type, description, and behavior of the tool
+- **Authenticator**(*optional*): Callable object that injects authentication to the REST API calls
+
+<CodeTabs>
+
+```python
+with Agent(...) as agent:
+    bearer_api_key = ...;
+
+    agent.add_restapi_tool(
+        tool_def={...},      # Tool definition
+        authenticator=BearerAuthenticator(bearer_api_key),
+    )
+```
+
+```typescript
+const agent = await defineAgent(...);
+
+const bearerApiKey = ...;
+
+agent.addRESTAPITool(
+  {...},      // Tool definition
+  { authenticator: bearerAutenticator(bearerApiKey) }
+);
+```
+</CodeTabs>
+
 ### Built-in tools
 
 Built-in tools uses the function of Ailoy’s internal module system. It work across all the environments supported. These tools are pre-registered and can be referenced by name.
@@ -64,6 +111,7 @@ Built-in tools uses the function of Ailoy’s internal module system. It work ac
 
 Defined by preset behavior implemented inside Ailoy. The only thing defined outside of Ailoy is the JMESPath query string(`outputPath`) to process the raw results of the function into useful data.
 
+***Tool definition*** for a built-in tool looks like:
 
 ```json
 {
@@ -75,6 +123,8 @@ Defined by preset behavior implemented inside Ailoy. The only thing defined outs
 }
 ```
 
+> *Built-in tools are not designed to be added at runtime.*
+
 ### Native tools
 
 Native tools allow developers to define custom Python functions that will be executed when the AI requests a tool call. This is useful for logic that lives inside your application.
@@ -83,7 +133,16 @@ Native tools allow developers to define custom Python functions that will be exe
 
 A Python or Node.js function or coroutine that will be called with arguments from the AI.
 
+#### How to add your own tools
+
+You can write your own tool as a native function and add it to the `Agent` through:
+- `agent.add_py_function_tool()` (for ***Python***)
+- `agent.addJsFunctionTool()` (for ***Node.js***).
+
+These functions get a ***custom native function*** and its ***tool description*** as their parameters.  
+
 <CodeTabs>
+
 ```python
 def a_useful_function_impl(arg0, arg1):
     a_useful_value = 0
@@ -91,10 +150,10 @@ def a_useful_function_impl(arg0, arg1):
     return a_useful_value
 
 with Agent(...) as agent:
-  agent.add_py_function_tool(
-    desc={...},      # Tool description
-    f=a_useful_function_impl,
-  )
+    agent.add_py_function_tool(
+        desc={...},      # Tool description
+        f=a_useful_function_impl,
+    )
 ```
 
 ```typescript
@@ -144,10 +203,11 @@ Behaviors of these are same as ones in **[cmath](https://en.cppreference.com/w/c
 
 #### Code to apply this tool
 <CodeTabs>
+
 ```python
 with Agent(...) as agent:
-  agent.add_tools_from_preset("calculator")
-  agent.query("Evaluate sin(pi/2).")
+    agent.add_tools_from_preset("calculator")
+    agent.query("Evaluate sin(pi/2).")
 ```
 
 ```typescript
@@ -159,19 +219,22 @@ agent.query("Evaluate sin(pi/2).")
 
 
 #### Example message to use this tool
-`Evaluate sin(pi/2).`
+`Evaluate sin(pi/2).`  
+`I want to know the value of sqrt(3^2 + 4^2).`  
+`Calculate "6/2*(1+2)"`
 
-### Frankfurters (Currency exchange rates)
+### Frankfurter (Currency exchange rates)
 A public API provided by the European Central Bank that provides currency exchange rate information.
 
 You can get exchange rates for one currency against another.
 
 #### Code to apply this tool
 <CodeTabs>
+
 ```python
 with Agent(...) as agent:
-  agent.add_tools_from_preset("frankfurter")
-  agent.query("I want to buy 100 U.S. Dollar with my Korean Won. How much do I need to take?")
+    agent.add_tools_from_preset("frankfurter")
+    agent.query("I want to buy 100 U.S. Dollar with my Korean Won. How much do I need to take?")
 ```
 
 ```typescript
@@ -182,10 +245,8 @@ agent.query("I want to buy 100 U.S. Dollar with my Korean Won. How much do I nee
 </CodeTabs>
 
 #### Example message to use this tool
-`I want to buy 100 U.S. Dollar with my Korean Won. How much do I need to take?`
-
-`Please summarize the current exchange rate situation of major currencies.`
-
+`I want to buy 100 U.S. Dollar with my Korean Won. How much do I need to take?`  
+`Please summarize the current exchange rate situation of major currencies.`  
 `I have 3000 yen, how much is this in USD?`
 
 ### TMDB
@@ -204,15 +265,16 @@ You can get a TMDB API key here: **[link](https://www.themoviedb.org/settings/ap
 
 #### Code to apply this tool with API key
 <CodeTabs>
+
 ```python
 tmdb_api_key = ...
 
 with Agent(...) as agent:
-  agent.add_tools_from_preset(
-    "tmdb",
-    authenticator=BearerAuthenticator(tmdb_api_key),
-  )
-  agent.query("Show me some famous movies recently.")
+    agent.add_tools_from_preset(
+        "tmdb",
+        authenticator=BearerAuthenticator(tmdb_api_key),
+    )
+    agent.query("Show me some famous movies recently.")
 ```
 
 ```typescript
@@ -227,10 +289,8 @@ agent.query("Show me some famous movies recently.")
 </CodeTabs>
 
 #### Example message to use this tool
-`Show me some famous movies recently.`
-
-`Can you find me every Iron Man movies?`
-
+`Show me some famous movies recently.`  
+`Can you find me every Iron Man movies?`  
 `Recommend me some movies similar to Inception of Christopher Nolan.`
 
 
@@ -250,24 +310,25 @@ This is an example of applying authentication in the way you want.
 
 #### Code to apply this tool with API key
 <CodeTabs>
+
 ```python
 nytimes_api_key = ...
 
 with Agent(...) as agent:
 
-  def nytimes_authenticator(request):
-      from urllib.parse import parse_qsl, urlencode, urlparse
+    def nytimes_authenticator(request):
+        from urllib.parse import parse_qsl, urlencode, urlparse
 
-      parts = urlparse(request.get("url", ""))
-      qs = {**dict(parse_qsl(parts.query)), "api_key": nytimes_api_key}
-      parts = parts._replace(query=urlencode(qs))
-      return {**request, "url": parts.geturl()}
+        parts = urlparse(request.get("url", ""))
+        qs = {**dict(parse_qsl(parts.query)), "api_key": nytimes_api_key}
+        parts = parts._replace(query=urlencode(qs))
+        return {**request, "url": parts.geturl()}
 
-  agent.add_tools_from_preset(
-      "nytimes",
-      authenticator=nytimes_authenticator,
-  )
-  agent.query("Find me some articles about 'Agentic AI'.")
+    agent.add_tools_from_preset(
+        "nytimes",
+        authenticator=nytimes_authenticator,
+    )
+    agent.query("Find me some articles about 'Agentic AI'.")
 ```
 
 ```typescript
@@ -288,8 +349,6 @@ agent.query("Find me some articles about 'Agentic AI'.")
 </CodeTabs>
 
 #### Example message to use this tool
-`Find me some articles about 'Agentic AI'.`
-
-`News on financial market trends, please.`
-
+`Find me some articles about 'Agentic AI'.`  
+`News on financial market trends, please.`  
 `Search for the latest scientific research results.`
